--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
     			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 		
+		<dependency>
+    			<groupId>org.apache.maven.plugins</groupId>
+    			<artifactId>maven-surefire-plugin</artifactId>
+    			<version>2.22.2</version>
+		</dependency>
+		
 	</dependencies>
 
 
