--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 		<java.version>1.8</java.version>
 		<maven.compiler.target>1.8</maven.compiler.target>
     		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
 		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 	</properties>
 
