--- a/pom.xml
+++ b/pom.xml
@@ -83,10 +83,15 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-                			<executable>true</executable>
+                		<executable>true</executable>
             			</configuration>
 			</plugin>
-			
+
+			<plugin>
+				  <groupId>org.apache.maven.plugins</groupId>
+				  <artifactId>maven-surefire-plugin</artifactId>
+				  <version>2.22.2</version>
+			</plugin>
 		</plugins>
 	</build>
 
